--- a/index.html
+++ b/index.html
@@ -1,8 +1,71 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1>hello world</h1>
-        <p>i'm part of the Github page.</p>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Page Content-->
+        <div class="container-fluid p-0">
+            <!-- About-->
+            <section class="resume-section" id="about">
+                <div class="resume-section-content">
+                    <h1 class="mb-0">
+                        Katlego
+                        <span class="text-primary">Makhafula</span>
+                    </h1>
+                    <div class="subheading mb-5">
+                        976 Park Street · Pretoria, Arcadia 0007 · (069) 148-3229 ·
+                        <a href="mailto:name@email.com">u21503193@tuks.co.za</a>
+                    </div>
+                    <p class="lead mb-5"><!-- Page Content-->
+                        <div class="container-fluid p-0">
+                            <!-- About-->
+                            <section class="resume-section" id="about">
+                                <div class="resume-section-content">
+                                    <h1 class="mb-0">
+                                        Katlego
+                                        <span class="text-primary">Makhafula</span>
+                                    </h1>
+                                    <div class="subheading mb-5">
+                                        976 Park Street · Pretoria, Arcadia 0007 · (069) 148-3229 ·
+                                        <a href="mailto:name@email.com">u21503193@tuks.co.za</a>
+                                    </div>
+                                    <p class="lead mb-5">I am an adaptable and passionate individual, interested in producing, high-quality work. I am well organized, self-motivated, and determined to gain knowledge and experience towards the attainment of outstanding performance, leadership, and profitability</p>
+                                    <div class="social-icons">
+                                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
+                                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                                    </div>
+                                </div>
+                            </section></p>
+                    <div class="social-icons">
+                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                    </div>
+                </div>
+            </section>
     </body>
 
 </html>
